--- a/app/assets/stylesheets/components/_flip_card.scss
+++ b/app/assets/stylesheets/components/_flip_card.scss
@@ -39,6 +39,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  transform-style: preserve-3d;
   /*customizable*/
   // border-radius: 16px;
   // box-shadow: 0 0 16px rgba(0,0,0,0.3);
