--- a/app/views/movies/_search_form.html.erb
+++ b/app/views/movies/_search_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(movie, remote: true,  html: {data: { add_movie_target: "form"}, class: "search-form"}) do |f| %>
   <h5 class="text-center my-2"><strong>Have something on mind!Feel free</strong></h5>    
-  <%= f.input :title, input_html: { "data-add-movie-target": "input" } %>
+  <%= f.input :title, input_html: { "data-add-movie-target": "input", class:"search-input" } %>
   <%= f.submit 'Search and Add', class: "btn btn-primary", data: {add_movie_target: "submit",action: 'click->add-movie#update' } %>
 <% end %>
