fixed event lister for flip card. Thank you Yann

--- a/app/assets/stylesheets/components/_flip_card.scss
+++ b/app/assets/stylesheets/components/_flip_card.scss
@@ -17,6 +17,7 @@
 .flip-card-inner {
   /*fixed*/
   position: relative;
+  z-index: 5;
   width: 100%;
   height: 100%;
   transition: transform .4s;
